--- a/www/app/index.html
+++ b/www/app/index.html
@@ -36,6 +36,7 @@
                 </div>
                 <div class="navbar-header">
                     <a href="" class="navbar-brand" title="$DBNAME" ng-click="PhiloMain.backToHome()">$DBNAME</a>
+                    <h4 style="color: white">Local Ecclesiastical Legislation in Medieval Europe / Législations ecclésiastiques locales dans l’Europe médiévale</h4>
                     <div style="position: relative" ng-if="philoConfig.report_error_link != ''">
                         <a id="header-report-error" target="_blank" ng-href="{{ philoConfig.report_error_link }}">Report Error</a>
                     </div>
