--- a/www/app/index.html
+++ b/www/app/index.html
@@ -30,9 +30,8 @@
                     <a href="https://artfl-project.uchicago.edu/philologic4">PhiloLogic4</a>
                 </div>
                 <div class="navbar-right">
-                    <a href="https://www.uchicago.edu">University of Chicago</a>
-                    <a href="http://www.atilf.fr/">ATILF-CNRS</a>
-                    <a href="https://artfl-project.uchicago.edu/content/contact-us" title="Contact information for the ARTFL Project">Contact Us</a>
+                    <a href="http://rdorin.website/">Project Homepage</a>
+                    <a href="http://rdorin.website/pages/documentation.html">Usage Guide</a>
                 </div>
                 <div class="navbar-header">
                     <a href="" class="navbar-brand" title="$DBNAME" ng-click="PhiloMain.backToHome()">$DBNAME</a>
