Update domain name to corpus-synodalium.com

--- a/www/app/index.html
+++ b/www/app/index.html
@@ -29,8 +29,8 @@
                     <a href="https://artfl-project.uchicago.edu/philologic4">PhiloLogic4</a>
                 </div>
                 <div class="navbar-left">
-                    <a href="http://rdorin.website/">Project Homepage</a>
-                    <a href="http://rdorin.website/pages/documentation.html">Usage Guide</a>
+                    <a href="https://corpus-synodalium.com/">Project Homepage</a>
+                    <a href="https://corpus-synodalium.com/pages/documentation.html">Usage Guide</a>
                 </div>
                 <div class="navbar-header">
                     <a href="" class="navbar-brand" title="$DBNAME" ng-click="PhiloMain.backToHome()">$DBNAME</a>
