Rename "Search Terms" to "Search Texts"

--- a/www/app/shared/searchForm/searchTerms.html
+++ b/www/app/shared/searchForm/searchTerms.html
@@ -1,7 +1,7 @@
 <div id="search_terms_container">
     <div id="search_terms" class="row">
         <div class="col-xs-12 col-sm-2 text-row">
-            Search Terms:
+            Search Texts:
         </div>
         <div class="col-xs-12 col-sm-10 col-md-6">
             <div class="input-group">
