Rename "Usage Guide" to "User Guide"

--- a/www/app/index.html
+++ b/www/app/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="navbar-left">
                     <a href="https://corpus-synodalium.com/">Project Homepage</a>
-                    <a href="https://corpus-synodalium.com/pages/documentation.html">Usage Guide</a>
+                    <a href="https://corpus-synodalium.com/pages/documentation.html">User Guide</a>
                 </div>
                 <div class="navbar-header">
                     <a href="" class="navbar-brand" title="$DBNAME" ng-click="PhiloMain.backToHome()">$DBNAME</a>
