--- a/www/app/shared/accessControl/accessControl.html
+++ b/www/app/shared/accessControl/accessControl.html
@@ -32,7 +32,7 @@
           <div class="col-xs-12 col-sm-3 text-row">Password:</div>
           <div class="col-xs-12 col-sm-4">
             <input
-              type="text"
+              type="password"
               class="form-control"
               name="password"
               ng-model="access.accessInput.password"
