--- a/www/app/index.html
+++ b/www/app/index.html
@@ -26,7 +26,7 @@
             <div class="container-fluid">
                 <div class="navbar-right">
                     <a class="link-on-dark" ng-href="{{::philoConfig.link_to_home_page}}" ng-if="philoConfig.link_to_home_page != ''">Go to home page</a>
-                    <a href="https://artfl-project.uchicago.edu/philologic4">PhiloLogic4</a>
+                    <a class="link-on-dark" href="https://artfl-project.uchicago.edu/philologic4">PhiloLogic4</a>
                 </div>
                 <div class="navbar-left">
                     <a class="link-on-dark" href="https://corpus-synodalium.com/">Project Homepage</a>
