Add citation link & Rename "Export References" btn

--- a/www/app/index.html
+++ b/www/app/index.html
@@ -29,8 +29,9 @@
                     <a class="link-on-dark" href="https://artfl-project.uchicago.edu/philologic4">PhiloLogic4</a>
                 </div>
                 <div class="navbar-left">
-                    <a class="link-on-dark" href="https://corpus-synodalium.com/">Project Homepage</a>
-                    <a class="link-on-dark" href="https://corpus-synodalium.com/pages/documentation.html">User Guide</a>
+                    <a class="link-on-dark" href="https://corpus-synodalium.com">Project Homepage</a>
+                    <a class="link-on-dark" href="https://corpus-synodalium.com/documentation">User Guide</a>
+                    <a class="link-on-dark" href="https://corpus-synodalium.com/citation">Citation Guidelines</a>
                 </div>
                 <div class="navbar-header">
                     <a href="" class="navbar-brand link-on-dark" title="$DBNAME" ng-click="PhiloMain.backToHome()">$DBNAME</a>
