Update search syntax (?) help text + Add link to Bibliography

--- a/www/app/index.html
+++ b/www/app/index.html
@@ -31,6 +31,7 @@
                 <div class="navbar-left">
                     <a class="link-on-dark" href="https://corpus-synodalium.com">Project Homepage</a>
                     <a class="link-on-dark" href="https://corpus-synodalium.com/documentation">User Guide</a>
+                    <a class="link-on-dark" href="https://corpus-synodalium.com/bibliography">Bibliography</a>
                     <a class="link-on-dark" href="https://corpus-synodalium.com/citation">Citation Guidelines</a>
                 </div>
                 <div class="navbar-header">
