--- a/www/app/shared/searchSyntax/searchSyntax.html
+++ b/www/app/shared/searchSyntax/searchSyntax.html
@@ -1,4 +1,8 @@
 <div>
+	NOTE: <span class="code-block">.*</span> is an approximate "match anything" wildcard operator, rather than the more traditional
+	(but less precise)
+	<span class="code-block">*</span> in many other search engines. <br/>
+
 	PhiloLogic4's query syntax has 5 basic operators:
 	<ol style="list-style-position: inside; margin-top: 10px; padding-left: 15px;">
 		<li>the plain token, essentially, any word at all, split on space, e.g. <span class="code-block">token</span></li>
@@ -51,7 +55,4 @@
 		<li><span class="code-block">?</span> indicates that the regular expression should match zero or one occurrence of the previous
 			character or bracketed group.</li>
 	</ol>
-	Thus, <span class="code-block">.*</span> is an approximate "match anything" wildcard operator, rather than the more traditional
-	(but less precise)
-	<span class="code-block">*</span> in many other search engines.
 </div>
