--- a/www/app/shared/searchSyntax/searchSyntax.html
+++ b/www/app/shared/searchSyntax/searchSyntax.html
@@ -1,7 +1,7 @@
 <div>
 	NOTE: <span class="code-block">.*</span> is an approximate "match anything" wildcard operator, rather than the more traditional
 	(but less precise)
-	<span class="code-block">*</span> in many other search engines. <br/>
+	<span class="code-block">*</span> in many other search engines. <br><br>
 
 	PhiloLogic4's query syntax has 5 basic operators:
 	<ol style="list-style-position: inside; margin-top: 10px; padding-left: 15px;">
