--- a/www/app/index.html
+++ b/www/app/index.html
@@ -15,6 +15,15 @@
     <!--Load all required CSS-->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135535706-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-135535706-3');
+    </script>
+
     <!-- PhiloLogic4 CSS -->
     $CSS
 
